methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:27: error: '<-' expected but ')' found.
  for (1 to p) {forward()}
             ^FlowerPot:28: error: illegal start of simple expression
}
^